[feature] Protection XSRF

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="mongodb://localhost:27017/tcg-inventory"
+DATABASE_URL="mongodb://127.0.0.1:27017/tcg-inventory"
 
 HTTP_PORT=3000
 HTTP_ADDRESS="127.0.0.1"
@@ -17,3 +17,6 @@ REFRESH_COOKIE="refresh"
 #--- JWT params
 AUTHORIZATION_TOKEN_EXPIRATION="5m"
 REFRESH_TOKEN_EXPIRATION="1h"
+
+#--- XSRF Token Validation
+XSRF_HEADER_NAME="X-XSRF-Token"
