[fix] typo in .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ HTTP_PORT=3000
 HTTP_ADDRESS="127.0.0.1"
 
 #--- JWT signing secret and algorithm
-JWT_SECRET="JujuMrBright"
+JWT_SECRET="GarrisJeamMichelAMoitie"
 JWT_ALGORITHM="HS512"
 # En cas de passage au chiffrement asymétrique RS512
 # JWT_PRIVATE_KEY_FILE="..."
